--- a/Account.html
+++ b/Account.html
@@ -28,7 +28,7 @@
                 </ul>
             </nav>
             <a href="Cart.html"><img src="Images\shopping-cart.png" width="30px" height="30px"></a>
-            <img src="C:\Users\castro\OneDrive\Documents\School Documents\Webpage Project\images\menu.png"
+            <img src="Images\menu.png"
                 class="menu-icon" onclick="menutoggle()">
         </div>
     </div>
